overflow fix

--- a/src/css/embla.css
+++ b/src/css/embla.css
@@ -19,7 +19,7 @@
     position: relative;
 }
 
-.embla__parallax { height: 100%; overflow: hidden; }
+.embla__parallax { height: 100%; overflow-x : hidden; }
 .embla__parallax__layer {
     position: relative;
     height: 100%;
